# spelunkyRL

./: .gitignore  pyproject.toml  readme.md
docs/: architecture.md  environments.md  getting-started.md
lua/: main copy.lua  main.lua  old.lua
lua/jumper/: license.txt
lua/luasocket/: ftp.lua  headers.lua  http.lua  license.txt  ltn12.lua  mime.lua  script_path.lua  smtp.lua  socket.lua  tp.lua  url.lua
spelunkyRL/: __init__.py
spelunkyRL/engine/: __init__.py  config.py  core.py
spelunkyRL/environments/: __init__.py  default_environment.py  dummy_environment.py  enemy_killer.py  first.py  get_to_exit.py  gold_grabber.py  gold_grabber_pixels.py  simple_environment.py  template_environment.py
spelunkyRL/examples/: README.md  benchmark_performance.py  evaluate_model.py  manual_control.py  record_video.py  train_get_to_exit.py
spelunkyRL/tools/: __init__.py  autoclick.py  entities-hierarchy.md  entities_info.txt  frame_grabber.py  id2name.py  save_replay.py  window_management.py
tensorboardlogs/09-04-25_1/: events.out.tfevents.1744291869.DESKTOP-IMKJIGP.6888.0
tensorboardlogs/09-04-25_2/: events.out.tfevents.1744301344.DESKTOP-IMKJIGP.9336.0  events.out.tfevents.1744395930.DESKTOP-IMKJIGP.4940.0  events.out.tfevents.1744483139.DESKTOP-IMKJIGP.4328.0
tensorboardlogs/14-04-25_0/: events.out.tfevents.1744695848.DESKTOP-IMKJIGP.24796.0
tensorboardlogs/8-4-25_0/: events.out.tfevents.1744139343.DESKTOP-IMKJIGP.34356.2  events.out.tfevents.1744139767.DESKTOP-IMKJIGP.34356.5  events.out.tfevents.1744140051.DESKTOP-IMKJIGP.34356.7  (+10 more)
(+124 files in other folders)
