[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spelunkyRL"
version = "0.1.0"

dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "stable-baselines3",
    "pywin32",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["spelunkyRL"]